jsbachParser.py
# Generated from jsbach.g4 by ANTLR 4.10.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class jsbachParser ( Parser ):

    grammarFileName = "jsbach.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'|:'", "':|'", "'{'", "'}'", "'if'", 
                     "'else'", "'while'", "'<<'", "'8<'", "'['", "']'", 
                     "'#'", "'('", "')'", "'<!>'", "'<?>'", "'<-'", "'<:>'", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'*'", "'/'", "'%'", "'+'", 
                     "'-'", "'>'", "'<'", "'>='", "'<='", "'='", "'/='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "ESCRIPTURA", 
                      "LECTURA", "ASSIGNACIO", "REPRODUCCIO", "NOTA", "ID", 
                      "VARIABLE", "ENTER", "NUMERO", "TEXT", "MULTIPLICACIO", 
                      "DIVISIO", "MODUL", "SUMA", "RESTA", "MAJOR", "MENOR", 
                      "MAJORIGUAL", "MENORIGUAL", "IGUAL", "DIFERENT", "COMENTARI", 
                      "WS" ]

    RULE_root = 0
    RULE_procediment = 1
    RULE_instruccio = 2
    RULE_assignacio = 3
    RULE_lectura = 4
    RULE_escriptura = 5
    RULE_reproduccio = 6
    RULE_invocacio = 7
    RULE_condicional = 8
    RULE_iteracio = 9
    RULE_afegit = 10
    RULE_tall = 11
    RULE_mida = 12
    RULE_consulta = 13
    RULE_llista = 14
    RULE_expressio = 15
    RULE_condicio = 16
    RULE_text = 17

    ruleNames =  [ "root", "procediment", "instruccio", "assignacio", "lectura", 
                   "escriptura", "reproduccio", "invocacio", "condicional", 
                   "iteracio", "afegit", "tall", "mida", "consulta", "llista", 
                   "expressio", "condicio", "text" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    ESCRIPTURA=15
    LECTURA=16
    ASSIGNACIO=17
    REPRODUCCIO=18
    NOTA=19
    ID=20
    VARIABLE=21
    ENTER=22
    NUMERO=23
    TEXT=24
    MULTIPLICACIO=25
    DIVISIO=26
    MODUL=27
    SUMA=28
    RESTA=29
    MAJOR=30
    MENOR=31
    MAJORIGUAL=32
    MENORIGUAL=33
    IGUAL=34
    DIFERENT=35
    COMENTARI=36
    WS=37

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.10.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class RootContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(jsbachParser.EOF, 0)

        def procediment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ProcedimentContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ProcedimentContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_root

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = jsbachParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 39
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.ID:
                self.state = 36
                self.procediment()
                self.state = 41
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 42
            self.match(jsbachParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProcedimentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jsbachParser.ID, 0)

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.VARIABLE)
            else:
                return self.getToken(jsbachParser.VARIABLE, i)

        def instruccio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.InstruccioContext)
            else:
                return self.getTypedRuleContext(jsbachParser.InstruccioContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_procediment

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProcediment" ):
                return visitor.visitProcediment(self)
            else:
                return visitor.visitChildren(self)




    def procediment(self):

        localctx = jsbachParser.ProcedimentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_procediment)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 44
            self.match(jsbachParser.ID)
            self.state = 48
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.VARIABLE:
                self.state = 45
                self.match(jsbachParser.VARIABLE)
                self.state = 50
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 51
            self.match(jsbachParser.T__0)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__4) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__8) | (1 << jsbachParser.ESCRIPTURA) | (1 << jsbachParser.LECTURA) | (1 << jsbachParser.REPRODUCCIO) | (1 << jsbachParser.ID) | (1 << jsbachParser.VARIABLE))) != 0):
                self.state = 52
                self.instruccio()
                self.state = 57
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 58
            self.match(jsbachParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InstruccioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def assignacio(self):
            return self.getTypedRuleContext(jsbachParser.AssignacioContext,0)


        def lectura(self):
            return self.getTypedRuleContext(jsbachParser.LecturaContext,0)


        def escriptura(self):
            return self.getTypedRuleContext(jsbachParser.EscripturaContext,0)


        def reproduccio(self):
            return self.getTypedRuleContext(jsbachParser.ReproduccioContext,0)


        def invocacio(self):
            return self.getTypedRuleContext(jsbachParser.InvocacioContext,0)


        def condicional(self):
            return self.getTypedRuleContext(jsbachParser.CondicionalContext,0)


        def iteracio(self):
            return self.getTypedRuleContext(jsbachParser.IteracioContext,0)


        def afegit(self):
            return self.getTypedRuleContext(jsbachParser.AfegitContext,0)


        def tall(self):
            return self.getTypedRuleContext(jsbachParser.TallContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_instruccio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInstruccio" ):
                return visitor.visitInstruccio(self)
            else:
                return visitor.visitChildren(self)




    def instruccio(self):

        localctx = jsbachParser.InstruccioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_instruccio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 60
                self.assignacio()
                pass

            elif la_ == 2:
                self.state = 61
                self.lectura()
                pass

            elif la_ == 3:
                self.state = 62
                self.escriptura()
                pass

            elif la_ == 4:
                self.state = 63
                self.reproduccio()
                pass

            elif la_ == 5:
                self.state = 64
                self.invocacio()
                pass

            elif la_ == 6:
                self.state = 65
                self.condicional()
                pass

            elif la_ == 7:
                self.state = 66
                self.iteracio()
                pass

            elif la_ == 8:
                self.state = 67
                self.afegit()
                pass

            elif la_ == 9:
                self.state = 68
                self.tall()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignacioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.VARIABLE)
            else:
                return self.getToken(jsbachParser.VARIABLE, i)

        def ASSIGNACIO(self):
            return self.getToken(jsbachParser.ASSIGNACIO, 0)

        def expressio(self):
            return self.getTypedRuleContext(jsbachParser.ExpressioContext,0)


        def llista(self):
            return self.getTypedRuleContext(jsbachParser.LlistaContext,0)


        def text(self):
            return self.getTypedRuleContext(jsbachParser.TextContext,0)


        def consulta(self):
            return self.getTypedRuleContext(jsbachParser.ConsultaContext,0)


        def mida(self):
            return self.getTypedRuleContext(jsbachParser.MidaContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_assignacio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignacio" ):
                return visitor.visitAssignacio(self)
            else:
                return visitor.visitChildren(self)




    def assignacio(self):

        localctx = jsbachParser.AssignacioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_assignacio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self.match(jsbachParser.VARIABLE)
            self.state = 72
            self.match(jsbachParser.ASSIGNACIO)
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 73
                self.match(jsbachParser.VARIABLE)
                pass

            elif la_ == 2:
                self.state = 74
                self.expressio(0)
                pass

            elif la_ == 3:
                self.state = 75
                self.llista()
                pass

            elif la_ == 4:
                self.state = 76
                self.text()
                pass

            elif la_ == 5:
                self.state = 77
                self.consulta()
                pass

            elif la_ == 6:
                self.state = 78
                self.mida()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LecturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LECTURA(self):
            return self.getToken(jsbachParser.LECTURA, 0)

        def VARIABLE(self):
            return self.getToken(jsbachParser.VARIABLE, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_lectura

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLectura" ):
                return visitor.visitLectura(self)
            else:
                return visitor.visitChildren(self)




    def lectura(self):

        localctx = jsbachParser.LecturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_lectura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self.match(jsbachParser.LECTURA)
            self.state = 82
            self.match(jsbachParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscripturaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCRIPTURA(self):
            return self.getToken(jsbachParser.ESCRIPTURA, 0)

        def VARIABLE(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.VARIABLE)
            else:
                return self.getToken(jsbachParser.VARIABLE, i)

        def expressio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressioContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressioContext,i)


        def text(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.TextContext)
            else:
                return self.getTypedRuleContext(jsbachParser.TextContext,i)


        def llista(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.LlistaContext)
            else:
                return self.getTypedRuleContext(jsbachParser.LlistaContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_escriptura

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEscriptura" ):
                return visitor.visitEscriptura(self)
            else:
                return visitor.visitChildren(self)




    def escriptura(self):

        localctx = jsbachParser.EscripturaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_escriptura)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 84
            self.match(jsbachParser.ESCRIPTURA)
            self.state = 89 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 89
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                    if la_ == 1:
                        self.state = 85
                        self.match(jsbachParser.VARIABLE)
                        pass

                    elif la_ == 2:
                        self.state = 86
                        self.expressio(0)
                        pass

                    elif la_ == 3:
                        self.state = 87
                        self.text()
                        pass

                    elif la_ == 4:
                        self.state = 88
                        self.llista()
                        pass



                else:
                    raise NoViableAltException(self)
                self.state = 91 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReproduccioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def REPRODUCCIO(self):
            return self.getToken(jsbachParser.REPRODUCCIO, 0)

        def NOTA(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.NOTA)
            else:
                return self.getToken(jsbachParser.NOTA, i)

        def getRuleIndex(self):
            return jsbachParser.RULE_reproduccio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReproduccio" ):
                return visitor.visitReproduccio(self)
            else:
                return visitor.visitChildren(self)




    def reproduccio(self):

        localctx = jsbachParser.ReproduccioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_reproduccio)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 93
            self.match(jsbachParser.REPRODUCCIO)
            self.state = 94
            self.match(jsbachParser.T__2)
            self.state = 98
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.NOTA:
                self.state = 95
                self.match(jsbachParser.NOTA)
                self.state = 100
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 101
            self.match(jsbachParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InvocacioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(jsbachParser.ID, 0)

        def expressio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressioContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressioContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_invocacio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInvocacio" ):
                return visitor.visitInvocacio(self)
            else:
                return visitor.visitChildren(self)




    def invocacio(self):

        localctx = jsbachParser.InvocacioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_invocacio)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(jsbachParser.ID)
            self.state = 107
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,8,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 104
                    self.expressio(0) 
                self.state = 109
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,8,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicio(self):
            return self.getTypedRuleContext(jsbachParser.CondicioContext,0)


        def instruccio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.InstruccioContext)
            else:
                return self.getTypedRuleContext(jsbachParser.InstruccioContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_condicional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)




    def condicional(self):

        localctx = jsbachParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(jsbachParser.T__4)
            self.state = 111
            self.condicio()
            self.state = 112
            self.match(jsbachParser.T__0)
            self.state = 114 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 113
                self.instruccio()
                self.state = 116 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__4) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__8) | (1 << jsbachParser.ESCRIPTURA) | (1 << jsbachParser.LECTURA) | (1 << jsbachParser.REPRODUCCIO) | (1 << jsbachParser.ID) | (1 << jsbachParser.VARIABLE))) != 0)):
                    break

            self.state = 118
            self.match(jsbachParser.T__1)
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==jsbachParser.T__5:
                self.state = 119
                self.match(jsbachParser.T__5)
                self.state = 120
                self.match(jsbachParser.T__0)
                self.state = 122 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 121
                    self.instruccio()
                    self.state = 124 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__4) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__8) | (1 << jsbachParser.ESCRIPTURA) | (1 << jsbachParser.LECTURA) | (1 << jsbachParser.REPRODUCCIO) | (1 << jsbachParser.ID) | (1 << jsbachParser.VARIABLE))) != 0)):
                        break

                self.state = 126
                self.match(jsbachParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IteracioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicio(self):
            return self.getTypedRuleContext(jsbachParser.CondicioContext,0)


        def instruccio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.InstruccioContext)
            else:
                return self.getTypedRuleContext(jsbachParser.InstruccioContext,i)


        def getRuleIndex(self):
            return jsbachParser.RULE_iteracio

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIteracio" ):
                return visitor.visitIteracio(self)
            else:
                return visitor.visitChildren(self)




    def iteracio(self):

        localctx = jsbachParser.IteracioContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_iteracio)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(jsbachParser.T__6)
            self.state = 131
            self.condicio()
            self.state = 132
            self.match(jsbachParser.T__0)
            self.state = 134 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 133
                self.instruccio()
                self.state = 136 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << jsbachParser.T__4) | (1 << jsbachParser.T__6) | (1 << jsbachParser.T__8) | (1 << jsbachParser.ESCRIPTURA) | (1 << jsbachParser.LECTURA) | (1 << jsbachParser.REPRODUCCIO) | (1 << jsbachParser.ID) | (1 << jsbachParser.VARIABLE))) != 0)):
                    break

            self.state = 138
            self.match(jsbachParser.T__1)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AfegitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(jsbachParser.VARIABLE, 0)

        def expressio(self):
            return self.getTypedRuleContext(jsbachParser.ExpressioContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_afegit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAfegit" ):
                return visitor.visitAfegit(self)
            else:
                return visitor.visitChildren(self)




    def afegit(self):

        localctx = jsbachParser.AfegitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_afegit)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(jsbachParser.VARIABLE)
            self.state = 141
            self.match(jsbachParser.T__7)
            self.state = 142
            self.expressio(0)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TallContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(jsbachParser.VARIABLE, 0)

        def expressio(self):
            return self.getTypedRuleContext(jsbachParser.ExpressioContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_tall

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTall" ):
                return visitor.visitTall(self)
            else:
                return visitor.visitChildren(self)




    def tall(self):

        localctx = jsbachParser.TallContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_tall)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(jsbachParser.T__8)
            self.state = 145
            self.match(jsbachParser.VARIABLE)
            self.state = 146
            self.match(jsbachParser.T__9)
            self.state = 147
            self.expressio(0)
            self.state = 148
            self.match(jsbachParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MidaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(jsbachParser.VARIABLE, 0)

        def getRuleIndex(self):
            return jsbachParser.RULE_mida

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMida" ):
                return visitor.visitMida(self)
            else:
                return visitor.visitChildren(self)




    def mida(self):

        localctx = jsbachParser.MidaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_mida)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 150
            self.match(jsbachParser.T__11)
            self.state = 151
            self.match(jsbachParser.VARIABLE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConsultaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VARIABLE(self):
            return self.getToken(jsbachParser.VARIABLE, 0)

        def expressio(self):
            return self.getTypedRuleContext(jsbachParser.ExpressioContext,0)


        def getRuleIndex(self):
            return jsbachParser.RULE_consulta

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConsulta" ):
                return visitor.visitConsulta(self)
            else:
                return visitor.visitChildren(self)




    def consulta(self):

        localctx = jsbachParser.ConsultaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_consulta)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 153
            self.match(jsbachParser.VARIABLE)
            self.state = 154
            self.match(jsbachParser.T__9)
            self.state = 155
            self.expressio(0)
            self.state = 156
            self.match(jsbachParser.T__10)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LlistaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENTER(self, i:int=None):
            if i is None:
                return self.getTokens(jsbachParser.ENTER)
            else:
                return self.getToken(jsbachParser.ENTER, i)

        def getRuleIndex(self):
            return jsbachParser.RULE_llista

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLlista" ):
                return visitor.visitLlista(self)
            else:
                return visitor.visitChildren(self)




    def llista(self):

        localctx = jsbachParser.LlistaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_llista)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(jsbachParser.T__2)
            self.state = 162
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==jsbachParser.ENTER:
                self.state = 159
                self.match(jsbachParser.ENTER)
                self.state = 164
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 165
            self.match(jsbachParser.T__3)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressioContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressio(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(jsbachParser.ExpressioContext)
            else:
                return self.getTypedRuleContext(jsbachParser.ExpressioContext,i)


        def ENTER(self):
            return self.getToken(jsbachParser.ENTER, 0)

        def VARIABLE(self):
            return self.getToken(jsbachParser.VARIABLE, 0)

        def MULTIPLICACIO(self):
            return self.getToken(jsbachParser.MULTIPLICACIO, 0)

        def DIVISIO(self):
            return self.getToken(jsbachParser.DIVISIO, 0)

        def MODUL(self):
            return self.getToken(jsbachParser.MODUL, 0)

        def SUMA(self):
            return self.getToken(jsbachParser.SUMA, 0)

        def RESTA(self):
            return self.getToken(jsbachParser.RESTA, 0)

        def MAJOR(self):
            return self.getToken(jsbachParser.MAJOR, 0)

        def MAJORIGUAL(self):
            return self.getToken(jsbachParser.MAJORIGUAL, 0)

        def MENOR(self):
            return self.getToken(jsbachParser.MENOR, 0)
